cmake_minimum_required(VERSION 3.16)
project(coursera)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(annagrams annagrams.cpp)
add_executable(countries countries.cpp)
add_executable(buses1 buses1.cpp)
add_executable(buses2 buses2.cpp)
add_executable(unique unique.cpp)
add_executable(map_values map_values.cpp)
add_executable(buses3 buses3.cpp)
add_executable(buses33 buses33.cpp)